<resources>
    <string name="app_name">Riesz Motion Magnifier</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="request_permission">This app needs camera permission.</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_performance">Performance</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="enable_processing">Enable processing</string>
    <string name="clear_history">Clear history</string>
    <string name="error_camera2_not_supported">This device doesn\'t support Camera2 API or doesn\'t have a supported image configuration.</string>
    <string name="pref_low_cutoff">Bandpass filter low cutoff</string>
    <string name="pref_high_cutoff">Bandpass filter high cutoff</string>
    <string name="pref_amplification">Amplification</string>
    <string name="pref_show_fps">Show FPS</string>
    <string name="pref_enable_stabilization">Enable image stabilization</string>
    <string name="pref_drift_correction_x">X-rotation drift correction (rad/s)</string>
    <string name="pref_drift_correction_y">Y-rotation drift correction (rad/s)</string>
    <string name="pref_header_stabilization">Image Stabilization</string>
    <string name="pref_horizontal_view_angle">Horizontal view angle (rad)</string>
    <string name="pref_vertical_view_angle">Vertical view angle (rad)</string>
</resources>
