<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:defaultValue="1"
        android:inputType="numberDecimal"
        android:key="low_cutoff"
        android:selectAllOnFocus="true"
        android:title="@string/pref_low_cutoff"/>
    <EditTextPreference
        android:defaultValue="2"
        android:inputType="numberDecimal"
        android:key="high_cutoff"
        android:selectAllOnFocus="true"
        android:title="@string/pref_high_cutoff"/>
    <EditTextPreference
        android:defaultValue="30"
        android:inputType="numberDecimal"
        android:key="amplification"
        android:selectAllOnFocus="true"
        android:title="@string/pref_amplification"/>

    <SwitchPreference
        android:defaultValue="false"
        android:key="show_fps"
        android:title="@string/pref_show_fps"/>

</PreferenceScreen>
