<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="enable_stabilization"
        android:title="@string/pref_enable_stabilization"/>

    <EditTextPreference
        android:defaultValue="1.0"
        android:dependency="enable_stabilization"
        android:inputType="numberDecimal"
        android:key="horizontal_view_angle"
        android:selectAllOnFocus="true"
        android:title="@string/pref_horizontal_view_angle"/>
    <EditTextPreference
        android:defaultValue="0.625"
        android:dependency="enable_stabilization"
        android:inputType="numberDecimal"
        android:key="vertical_view_angle"
        android:selectAllOnFocus="true"
        android:title="@string/pref_vertical_view_angle"/>
    <EditTextPreference
        android:defaultValue="0"
        android:dependency="enable_stabilization"
        android:inputType="numberDecimal|numberSigned"
        android:key="drift_correction_x"
        android:selectAllOnFocus="true"
        android:title="@string/pref_drift_correction_x"/>
    <EditTextPreference
        android:defaultValue="0"
        android:dependency="enable_stabilization"
        android:inputType="numberDecimal|numberSigned"
        android:key="drift_correction_y"
        android:selectAllOnFocus="true"
        android:title="@string/pref_drift_correction_y"/>
</PreferenceScreen>
