<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".CameraFragment">

    <com.yongyi.rieszmagnifyandroid.AutoFitSurfaceView
        android:id="@+id/surfaceView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@color/blackOverlay"
            android:padding="@dimen/activity_margin">

            <ImageButton
                android:background="?android:selectableItemBackground"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/action_settings"
                android:src="@drawable/ic_settings_white_24dp"
                android:id="@+id/settingsButton"/>

            <Switch
                android:id="@+id/processingSwitch"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enable_processing"
                android:textAppearance="?android:textAppearanceMedium"
                android:checked="false"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/blackOverlay"
            android:orientation="horizontal"
            android:padding="@dimen/activity_margin"
            android:weightSum="1">

            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>

        </LinearLayout>

        <Button
            android:id="@+id/clearHistoryButton"
            style="?android:borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/activity_margin"
            android:text="@string/clear_history"/>
    </RelativeLayout>
</FrameLayout>
